--- a/app/Resources/FOSUserBundle/views/Registration/email.txt.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/email.txt.twig
@@ -1,6 +1,20 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block subject %}
+{%- autoescape false -%}
+{{ 'registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
+{%- endautoescape -%}
+{% endblock %}
+
+{% block body_text %}
+{% autoescape false %}
+{{ 'registration.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
+{% endautoescape %}
+{% endblock %}
+{% block body_html %}{% endblock %}
+
+{#
+{% block subject %}
     {{ "Création de compte covoiturage" }}
 {% endblock %}
 
@@ -10,3 +24,4 @@
     <p>Un compte a été créé au nom de <strong>{{ user.username }}</strong></p>
     <p>Lien d'activation <a href="{{ confirmationUrl }}">{{ confirmationUrl }}</a></p>
 {% endblock %}
+#}
