--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,12 +6,12 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <strong>Home page</strong>
+                        <strong>Page d'accueil</strong>
                     </div>
                     
                     <div class="panel-body">
                         <a class="btn btn-primary" href="logout">
-                            <i class="glyphicon glyphicon-log-out"></i> Logout
+                            <i class="glyphicon glyphicon-log-out"></i> Se déconnecter
                         </a>
                     </div>
                 </div>
