--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -6,7 +6,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <strong>{{ 'login.title'|trans }}</strong>
+                        <strong>Connexion</strong>
                     </div>
                     
                     <div class="panel-body">
@@ -18,23 +18,23 @@
                             {% endif %}
                             
                             <div class="form-group">
-                                <label for="username">Username:</label>
+                                <label for="username">Nom d'utilisateur</label>
                                 <input type="text" id="username" class="form-control" name="_username" value="{{ last_username }}" />
                             </div>
                             
                             <div class="form-group">
-                                <label for="password">Password:</label>
+                                <label for="password">Mot de passe</label>
                                 <input type="password" id="password" class="form-control" name="_password" />
                             </div>
                             
                             <div class="form-group">
                                 <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                                <label for="remember_me">Remember me</label>
+                                <label for="remember_me">Se souvenir de moi</label>
                             </div>
 
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                             <button type="submit" class="btn btn-primary">
-                                <i class="glyphicon glyphicon-log-in"></i> Login
+                                <i class="glyphicon glyphicon-log-in"></i> Connection
                             </button>
                         </form>
                     </div>
@@ -42,12 +42,12 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <strong>Register</strong>
+                        <strong>Pas de compte</strong>
                     </div>
                     
                     <div class="panel-body">
                         <a class="btn btn-success" href="register">
-                            <i class="glyphicon glyphicon-pencil"></i> Register
+                            <i class="glyphicon glyphicon-pencil"></i> Créer un compte
                         </a>
                     </div>
                 </div>
