--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}{{ 'base.welcome'|trans }}{% endblock %}</title>
+        <title>{% block title %}Covoiturage{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.min.css')}}" />
             <link rel="stylesheet" type="text/css" href="{{asset('css/jquery.datetimepicker.min.css')}}" />
@@ -18,19 +18,18 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
             <div class="navbar-header">
-                <li class="navbar-brand">{{ 'base.covoiturage'|trans }}</li>
+                <li class="navbar-brand">Covoiturage</li>
             </div>
             
             <ul class="nav navbar-nav navbar-right">
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    <li><p class="navbar-text">{{ 'Logged in as ' }} {{ app.user.username }}</p></li>
+                    <li><p class="navbar-text">Connecté: {{ app.user.username }}</p></li>
                     <li><a href="{{ path('fos_user_profile_show') }}"><span class="glyphicon glyphicon-cog"></span> Profil</a></li>
-                    <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Se déconnecter</a></li>
                 {% else %}
-                    <li><a href="{{ path('fos_user_registration_register') }}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="{{ path('fos_user_security_login') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="{{ path('fos_user_registration_register') }}"><span class="glyphicon glyphicon-user"></span> Créer un compte</a></li>
+                    <li><a href="{{ path('fos_user_security_login') }}"><span class="glyphicon glyphicon-log-in"></span> Se connecter</a></li>
                 {% endif %}
-            
             </ul>
         </nav>
 
