--- a/app/Resources/views/travels/search.html.twig
+++ b/app/Resources/views/travels/search.html.twig
@@ -6,10 +6,9 @@
             <div class="panel-heading">
                 <strong>Recherche de trajets</strong>
             </div>
-            
 
             <div class="panel-body">
-                <form action="{{ path("search") }}" method="post">
+                <form action="{{ path("travel_search") }}" method="post">
                     <div class="form-group">
                         <input id="villeDepart" name="villeDepart" type="text" class="form-control" placeholder="ville de départ">
                     </div>
@@ -19,16 +18,23 @@
                     <div class="form-group">
                         <input id="dateDepart" name="dateDepart" type="text" class="form-control" placeholder="Date de départ" readonly>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default">Rechercher</button>
                 </form>
 
                 <script type="text/javascript">
                     $(function () {
                         $('#dateDepart').datetimepicker({
                             value:new Date(),
-                            timepicker:false,
-                            format:'d/m/Y', 
-                            defaultDate:new Date()
+                            format:'d/m/Y H:i', 
+                            defaultDate:new Date(),
+                            allowTimes:[
+                              '00:00', '01:00', '02:00', '03:00',
+                              '04:00', '05:00', '06:00', '07:00',
+                              '08:00', '09:00', '10:00', '11:00',
+                              '12:00', '13:00', '14:00', '15:00',
+                              '16:00', '17:00', '18:00', '19:00',
+                              '20:00', '21:00', '22:00', '23:00'
+                            ]
                        });
                     });
                 </script>
@@ -51,7 +57,7 @@
                         <td>{{ trajet.villeDepart }}</td>
                         <td>{{ trajet.villeArrivee }}</td>
                         <td>{{ trajet.prix }}</td>
-                        <td>{{ trajet.heureDepart }}</td>
+                        <td>{{ trajet.dateDepart }}</td>
                         <td>
                             <button class="btn btn-primary">Reserver</button>
                         </td>
@@ -59,6 +65,5 @@
                 {% endfor %}
             </table>
         {% endif %}
-        
     </div>
 {% endblock %}
