--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,24 +13,60 @@
             <script src="{{ asset('js/jquery.datetimepicker.full.min.js') }}"></script>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <style> 
+            .navbar {
+              margin-bottom: 0;
+              border-radius: 0;
+            }
+
+            .colorTheme{
+                background-color: #1abc9c;
+                color: #222222;
+            }
+            
+            .navbar-nav li a:hover {
+                color: #1abc9c !important;
+            }
+            
+            .panel{
+                margin-top: 25px;
+            }
+            
+            .panel > .panel-heading {
+                background-color: #222222;
+                color: white;
+            }
+            
+            .panel > .panel-body {
+                background-color: #F0F0F0;
+            }
+            
+        </style> 
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
-            <div class="navbar-header">
-                <li class="navbar-brand">Covoiturage</li>
+                <div class="navbar-header">
+                    <a class="navbar-brand">Covoiturage</a>
+                </div>
+                
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ path('homepage') }}">Accueil</a></li>
+                    <li><a href="{{ path('travel_search')}}">Trajets</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                        <li><p class="navbar-text">Connecté: {{ app.user.username }}</p></li>
+                        <li><a href="{{ path('fos_user_profile_show') }}"><span class="glyphicon glyphicon-cog"></span> Profil</a></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Se déconnecter</a></li>
+                    {% else %}
+                        <li><a href="{{ path('fos_user_registration_register') }}"><span class="glyphicon glyphicon-user"></span> Créer un compte</a></li>
+                        <li><a href="{{ path('fos_user_security_login') }}"><span class="glyphicon glyphicon-log-in"></span> Se connecter</a></li>
+                    {% endif %}
+                </ul>
             </div>
-            
-            <ul class="nav navbar-nav navbar-right">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    <li><p class="navbar-text">Connecté: {{ app.user.username }}</p></li>
-                    <li><a href="{{ path('fos_user_profile_show') }}"><span class="glyphicon glyphicon-cog"></span> Profil</a></li>
-                    <li><a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Se déconnecter</a></li>
-                {% else %}
-                    <li><a href="{{ path('fos_user_registration_register') }}"><span class="glyphicon glyphicon-user"></span> Créer un compte</a></li>
-                    <li><a href="{{ path('fos_user_security_login') }}"><span class="glyphicon glyphicon-log-in"></span> Se connecter</a></li>
-                {% endif %}
-            </ul>
+
         </nav>
 
         {% if app.request.hasPreviousSession %}
