--- a/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
@@ -1,7 +1,21 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
-{% trans_default_domain 'FOSUserBundle' %}
 
-{% block fos_user_content %}
-    <p>{{ 'registration.check_email'|trans({'%email%': user.email}) }}</p>
-{% endblock fos_user_content %}
+{% block body %}
+    <style>
+        body{
+            color: #FFF;
+        }
+        
+        .colorfont{
+            color: #222222
+        }
+    </style>
+    
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-body text-center colorfont">Un e-mail a été envoyé à l'adresse {{user.email}}. Il contient un lien d'activation sur lequel il vous faudra cliquer afin d'activer votre compte.</div>
+        </div>
+    </div>
+
+{% endblock body %}
