--- a/app/Resources/views/travels/new.html.twig
+++ b/app/Resources/views/travels/new.html.twig
@@ -26,19 +26,19 @@
                 {{ form_errors(form) }}
                 {{ form_start(form) }}
                     <div class="form-group">
-                        {{ form_row(form.villeDepart, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.villeDepart, {'attr': {'class': 'form-control', 'placeholder':'Ville de départ'}}) }}
                     </div>
                     <div class="form-group">
-                        {{ form_row(form.villeArrivee, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.villeArrivee, {'attr': {'class': 'form-control', 'placeholder':'Ville d\'arrivée'}}) }}
                     </div>
                     <div class="form-group">
-                        {{ form_row(form.dateDepart, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.dateDepart, {'attr': {'class': 'form-control', 'style':'height:53px', 'placeholder':'Date de départ'}}) }}
                     </div>
                     <div class="form-group">
-                        {{ form_row(form.prix, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.prix, {'attr': {'class': 'form-control', 'min':'0', 'step':'0.01', 'placeholder':'Prix pour un passager'}}) }}
                     </div>
                     <div class="form-group">
-                        {{ form_row(form.maxPlaces, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.maxPlaces, {'attr': {'class': 'form-control', 'min':'1', 'placeholder':'Nombre de places disponibles'}}) }}
                     </div>
                     <button type="submit" class="btn btn-default">Ajouter</button>
                 {{ form_end(form) }}
