Ajouter trajet fonctionne + ui petites modifs

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,10 @@
             <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.min.css')}}" />
             <link rel="stylesheet" type="text/css" href="{{asset('css/jquery.datetimepicker.min.css')}}" />
             <link rel="stylesheet" type="text/css" href="{{asset('css/basestyle.css')}}" />
+        
+            <style>
+                html, body {min-width: 700px}
+            </style>
         {% endblock %}
         {% block javascripts %}
             <script src="{{ asset('js/jquery.min.js') }}"></script>
