--- a/app/Resources/views/travels/new.html.twig
+++ b/app/Resources/views/travels/new.html.twig
@@ -32,7 +32,32 @@
                         {{ form_row(form.villeArrivee, {'attr': {'class': 'form-control', 'placeholder':'Ville d\'arrivée'}}) }}
                     </div>
                     <div class="form-group">
-                        {{ form_row(form.dateDepart, {'attr': {'class': 'form-control', 'style':'height:53px', 'placeholder':'Date de départ'}}) }}
+                        <label for="dateDepart">Date de départ</label>
+                        <div class="row">
+                            <div class="col-xs-1">
+                                <label>Date</label>
+                            </div>
+                            <div class="col-xs-2">
+                                {{ form_row(form.dateDepart.date.day, {'label':false, 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-xs-2">
+                                {{ form_row(form.dateDepart.date.month, {'label':false, 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-xs-2">
+                                {{ form_row(form.dateDepart.date.year, {'label':false, 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-1">
+                                <label>Heure</label>
+                            </div>
+                            <div class="col-xs-2">
+                                {{ form_row(form.dateDepart.time.hour, {'label':false, 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-xs-2">
+                                {{ form_row(form.dateDepart.time.minute, {'label':false, 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         {{ form_row(form.prix, {'attr': {'class': 'form-control', 'min':'0', 'step':'0.01', 'placeholder':'Prix pour un passager'}}) }}
