--- a/web/css/basestyle.css
+++ b/web/css/basestyle.css
@@ -19,7 +19,7 @@
             
             .panel > .panel-heading {
                 background-color: #222222;
-                color: white;
+                color: #1abc9c;
             }
             
 
