--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -3,8 +3,21 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block body %}
-    <div class="fos_user_user_show">
-        <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-        <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Mon Profil</strong>
+            </div>
+
+            <div class="panel-body">
+                <label>Nom de compte :</label>
+                <div class="well well-sm">{{ user.username }}</div>
+                
+                <label>Adresse e-mail :</label>
+                <div class="well well-sm">{{ user.email }}</div>      
+            </div>
+        </div>
     </div>
+
 {% endblock %}
