--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,9 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand">Covoiturage</a>
+                    <a class="navbar-brand">
+                        <img class="center-block" src="https://i.imgur.com/X6pJev5.png" alt="CovoitExpress" style="width:30px">
+                    </a>
                 </div>
                 
                 <ul class="nav navbar-nav menu" id="menu">
