--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,21 +1,56 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
+
+    <style>
+        #instructions{
+            background: rgba(26,188,156,0.8);
+            padding-top: 50px;
+            padding-bottom: 50px;
+            color: #FFF;
+        }
+        .jumbotron{
+            background: rgba(255,255,255,0.5);
+            margin-bottom: 0px;
+        }
+    </style>
+    <div class="jumbotron">   
+        
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <strong>Page d'accueil</strong>
-                    </div>
-                    
-                    <div class="panel-body">
-                        <a class="btn btn-primary" href="logout">
-                            <i class="glyphicon glyphicon-log-out"></i> Se déconnecter
-                        </a>
-                    </div>
+            <div class="col-md-4">
+              <img class="center-block" src="https://i.imgur.com/X6pJev5.png" alt="Logo" style="width:300px">
+            </div>
+            <div class="center-block" style="padding:50px;padding-top: 0px">
+              <h1>Bienvenue sur CovoitExpress !</h1>
+              <p>Projet Systèmes Répartis - TP2</p>
+              <p>Benjamin DAGOURET - Florian VIDAL</p>
+            </div>
+        </div>
+    </div>
+    
+    <div id="instructions">
+        <div class="container">
+            <div class="row" style="text-align: center">
+                <div class="col-sm-4 "> 
+                    <img src="https://i.imgur.com/LHxsdGL.png" alt="Etape 1">
+                    <h3>Etape 1 : Inscription</h3>
+                    <p>Créez un compte en cliquant sur le bonton situé à la droite du menu.
+                       Une fois votre compte validé, connectez vous en cliquant sur le bonton "Se Connecter"</p>
+                </div>
+
+                <div class="col-sm-4 "> 
+                    <img src="https://i.imgur.com/zFZO0CX.png" alt="Etape 2">
+                    <h3>Etape 2 : Recherche</h3>
+                    <p>Recherchez les trajets proposés par les covoitureurs à l'aide de la page "Rechercher Trajet" située dans le menu déroulant de l'onglet "Trajets"</p>
+                </div>
+                
+                <div class="col-sm-4 "> 
+                    <img src="https://i.imgur.com/dRy8PeD.png" alt="Etape 3">
+                    <h3>Etape 3 : Réservation</h3>
+                    <p>Une fois le trajet de vos rêves trouvé, réservez une place à bord de la voiture. Vos réservations sont disponibles dans l'onglet "Mes Réservations"</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
