--- a/app/Resources/views/travels/search.html.twig
+++ b/app/Resources/views/travels/search.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block body %}  
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -19,26 +19,14 @@
                     </div>
                     <div class="form-group">
                         <label>Date de départ :</label>
-                        <input id="dateDepart" name="dateDepart" type="text" class="form-control" placeholder="Date de départ" readonly>
+                        <input id="dateDepart" name="dateDepart" class="form-control" placeholder="Date de départ" readonly>
                     </div>
                     <button type="submit" class="btn colorTheme">Rechercher</button>
                 </form>
 
                 <script type="text/javascript">
                     $(function () {
-                        $('#dateDepart').datetimepicker({
-                            value:new Date(),
-                            format:'d/m/Y H:i', 
-                            defaultDate:new Date(),
-                            allowTimes:[
-                              '00:00', '01:00', '02:00', '03:00',
-                              '04:00', '05:00', '06:00', '07:00',
-                              '08:00', '09:00', '10:00', '11:00',
-                              '12:00', '13:00', '14:00', '15:00',
-                              '16:00', '17:00', '18:00', '19:00',
-                              '20:00', '21:00', '22:00', '23:00'
-                            ]
-                       });
+                        $('#dateDepart').datepicker();
                     });
                 </script>
             </div>
