--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
                             </div>
-                            <button class="btn btn-primary" type="submit">Créer un compte</button>
+                            <button class="btn colorTheme" type="submit">Créer un compte</button>
                         {{ form_end(form) }}
                     </div>
                 </div>
