--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,8 @@
                     <li><a href="{{ path('homepage') }}">Accueil</a></li>
                     <li>
                         <a href="#">Trajets</a>
-                        <ul> 
+                        <ul>
+                            <li><a href="{{ path('travel_list')}}">Mes Trajets</a></li>
                             <li><a href="{{ path('travel_new')}}">Ajouter Trajet</a></li>
                             <li><a href="{{ path('travel_search')}}">Rechercher Trajet</a></li>
                         </ul>
