--- a/app/Resources/views/travels/new.html.twig
+++ b/app/Resources/views/travels/new.html.twig
@@ -65,7 +65,7 @@
                     <div class="form-group">
                         {{ form_row(form.maxPlaces, {'attr': {'class': 'form-control', 'min':'1', 'placeholder':'Nombre de places disponibles'}}) }}
                     </div>
-                    <button type="submit" class="btn btn-default">Ajouter</button>
+                    <button type="submit" class="btn colorTheme">Ajouter</button>
                 {{ form_end(form) }}
             </div>
         </div>
