--- a/app/Resources/views/travels/view.html.twig
+++ b/app/Resources/views/travels/view.html.twig
@@ -14,7 +14,7 @@
     
     <div class="container">
         <div class="panel panel-default">
-            <div class="panel-body text-center colorfont">Un e-mail a été envoyé à l'adresse {{user.email}}. Il contient un lien d'activation sur lequel il vous faudra cliquer afin d'activer votre compte.</div>
+            <div class="panel-body text-center colorfont">Un e-mail a été envoyé à l'adresse. Il contient un lien d'activation sur lequel il vous faudra cliquer afin d'activer votre compte.</div>
         </div>
     </div>
 
