--- a/app/Resources/views/reservation/list.html.twig
+++ b/app/Resources/views/reservation/list.html.twig
@@ -1,1 +1,34 @@
-{# empty Twig template #}
+{% extends 'base.html.twig' %}
+
+{% block body %}  
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Résultat</strong>
+            </div>
+
+            <div class="panel-body">
+                {% if reservations is empty %}
+                    <div>Vous n'avez encore aucune réservation</div>
+                {% else %}
+                    <table class="table table-hover ">
+                        <tr>
+                            <th>Ville de départ</th>
+                            <th>Ville d'arrivée</th>
+                            <th>Prix</th>
+                            <th>Heure de départ</th>
+                        </tr>
+                        {% for reservation in reservations %}
+                            <tr class={{ true == true ? 'test' }}>
+                                <td>{{ reservation.trajet.villeDepart }}</td>
+                                <td>{{ reservation.trajet.villeArrivee }}</td>
+                                <td>{{ reservation.trajet.prix }} $</td>
+                                <td>{{ reservation.trajet.dateDepart|date('m/d/Y') }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
