--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -15,7 +15,48 @@
                 <div class="well well-sm">{{ user.username }}</div>
                 
                 <label>Adresse e-mail :</label>
-                <div class="well well-sm">{{ user.email }}</div>      
+                <div class="well well-sm">{{ user.email }}</div>
+                
+                <label>Préférences :</label>
+                <div class="row" style="text-align: center">
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/LHxsdGL.png" alt="Etape 1">
+                        <h3>Fumeur</h3>
+                        <p>Cet utilisateur fume en voiture</p>
+                    </div>
+
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/zFZO0CX.png" alt="Etape 2">
+                        <h3>Animal</h3>
+                        <p>Cet utilisateur transporte un animal</p>
+                    </div>
+
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/dRy8PeD.png" alt="Etape 3">
+                        <h3>Climatisation</h3>
+                        <p>Cet utilisateur accepte la climatisation</p>
+                    </div>
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/LHxsdGL.png" alt="Etape 1">
+                        <h3>Gros bagages</h3>
+                        <p>Cet utilisateur transporte des gros bagages</p>
+                    </div>
+
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/zFZO0CX.png" alt="Etape 2">
+                        <h3>Vélo</h3>
+                        <p>Recherchez les trajets proposés par les covoitureurs à l'aide de la page "Rechercher Trajet" située dans le menu déroulant de l'onglet "Trajets"</p>
+                    </div>
+
+                    <div class="col-sm-2 "> 
+                        <img src="https://i.imgur.com/dRy8PeD.png" alt="Etape 3">
+                        <h3>Etape 3 : Réservation</h3>
+                        <p>Une fois le trajet de vos rêves trouvé, réservez une place à bord de la voiture. Vos réservations sont disponibles dans l'onglet "Mes Réservations"</p>
+                    </div>
+                </div>
+                
+                
+                
             </div>
         </div>
     </div>
