--- a/app/Resources/views/travels/new.html.twig
+++ b/app/Resources/views/travels/new.html.twig
@@ -24,6 +24,7 @@
 
             <div class="panel-body">
                 {{ form_errors(form) }}
+                {{ form_errors(form.dateDepart) }}
                 {{ form_start(form) }}
                     <div class="form-group">
                         {{ form_row(form.villeDepart, {'attr': {'class': 'form-control', 'placeholder':'Ville de départ'}}) }}
