--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -1,12 +1,52 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
-{% trans_default_domain 'FOSUserBundle' %}
+{% block body %}
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Modification du profil</strong>
+            </div>
 
-{% block fos_user_content %}
-    {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
-        {{ form_widget(form) }}
-        <div>
-            <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+            <div class="panel-body">
+               <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                                {{ form_errors(form) }}
+                                {{ form_start(form) }}
+                                    <div class="form-group">
+                                        {{ form_row(form.username, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.current_password, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.fumeur, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.animaux, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.climatisation, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.grosBagage, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.velo, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_row(form.preference.ski, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <button class="btn colorTheme" type="submit">Valider</button>
+                                {{ form_end(form) }}
+                    </div>
+                </div>
+            </div>
         </div>
-    {{ form_end(form) }}
+    </div>
+
+
+
 {% endblock %}
