--- a/app/Resources/views/reservation/list.html.twig
+++ b/app/Resources/views/reservation/list.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>Résultat</strong>
+                <strong>Mes Réservations</strong>
             </div>
 
             <div class="panel-body">
