--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -33,7 +33,7 @@
                             </div>
 
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="btn colorTheme">
                                 <i class="glyphicon glyphicon-log-in"></i> Connection
                             </button>
                         </form>
@@ -46,7 +46,7 @@
                     </div>
                     
                     <div class="panel-body">
-                        <a class="btn btn-success" href="register">
+                        <a class="btn colorTheme" href="register">
                             <i class="glyphicon glyphicon-pencil"></i> Créer un compte
                         </a>
                     </div>
