--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -1,10 +1,25 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block fos_user_content %}
-    <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
-    {% if targetUrl %}
-        <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
-    {% endif %}
-{% endblock fos_user_content %}
+{% block body %}
+    <style>
+        body{
+            color: #FFF;
+        }
+        
+        .colorfont{
+            color: #222222
+        }
+    </style>
+    
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-body text-center colorfont">
+                {{ 'registration.confirmed'|trans({'%username%': user.username}) }}
+                </br>
+                <a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a>
+            </div>
+        </div>
+    </div>
+{% endblock body %}
