--- a/app/Resources/views/reservation/new.html.twig
+++ b/app/Resources/views/reservation/new.html.twig
@@ -24,7 +24,7 @@
                         <input class="form-control" type="text" name="cryptogramme" placeholder="999">
                     </div>
                     
-                    <input class="btn btn-success" type="submit" value="Submit">
+                    <input class="btn colorTheme" type="submit" value="Valider">
                 </form> 
             </div>
         </div>
