--- a/app/Resources/views/travels/search.html.twig
+++ b/app/Resources/views/travels/search.html.twig
@@ -48,16 +48,22 @@
                             <th>Prix</th>
                             <th>Heure de départ</th>
                             <th>Action</th>
+                            <th>Profil conducteur</th>
                         </tr>
                         {% for trajet in trajets %}
                             <tr>
                                 <td>{{ trajet.villeDepart }}</td>
                                 <td>{{ trajet.villeArrivee }}</td>
                                 <td>{{ trajet.prix }} $</td>
-                                <td>{{ trajet.dateDepart }}</td>
+                                <td>{{ trajet.dateDepart|date('m/d/Y h:i') }}</td>
                                 <td>
                                     <form action="{{ path("reservation_new", { 'idTrajet': trajet.id }) }}">
                                         <input class="btn colorTheme" type="submit" value="Reserver" />
+                                    </form>
+                                </td>
+                                <td>
+                                    <form action="{{ path("profile_view", { 'id': trajet.user.id }) }}">
+                                        <input class="btn colorTheme" type="submit" value="Voir" />
                                     </form>
                                 </td>
                             </tr>
